--- a/snake/index.html
+++ b/snake/index.html
@@ -1,5 +1,5 @@
 ﻿<html>
-    <canvas id="canvas" width="860" height="605" style="position: absolute; transform: translate(-50%, -50%)">Tarayıcınız canvası desteklemiyor. :'(</canvas>
+    <canvas id="canvas" width="860" height="605" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">Tarayıcınız canvası desteklemiyor. :'(</canvas>
 
     <script>
 
