--- a/snake/index.html
+++ b/snake/index.html
@@ -1,4 +1,5 @@
 ﻿<html>
+<body style="background-color: black;">
     <canvas id="canvas" width="860" height="605" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">Tarayıcınız canvası desteklemiyor. :'(</canvas>
 
     <script>
@@ -334,5 +335,5 @@
         }
 
     </script>
-
+</body>
 </html>
