--- a/snake/index.html
+++ b/snake/index.html
@@ -1,7 +1,9 @@
 ﻿<html>
 <body id="body" style="background-color: black;">
     <canvas id="canvas" width="860" height="605" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">Tarayıcınız canvası desteklemiyor. :'(</canvas>
-    <script src="https://github.com/john-doherty/swiped-events/blob/master/dist/swiped-events.min.js">
+    <script src="https://github.com/john-doherty/swiped-events/blob/master/dist/swiped-events.min.js"></script>
+
+    <script>
 
         window.onload = function(){
 
