--- a/snake/index.html
+++ b/snake/index.html
@@ -1,5 +1,5 @@
 ﻿<html>
-<body id="body" style="background-color: black;">
+<body id="body" style="background-color: rgb(20, 20, 20);">
     <canvas id="canvas" width="860" height="605" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">Tarayıcınız canvası desteklemiyor. :'(</canvas>
     <script>
 
