--- a/snake/index.html
+++ b/snake/index.html
@@ -1,6 +1,21 @@
 ﻿<html>
+    <style>
+        .anasayfabtn {
+            width: 27px;
+            height: 48px;
+            background-image: url(geri_dön.png);
+            background-color: rgb(20, 20, 20);
+            border: none;
+            outline: none;
+            cursor: pointer;
+        }
+    </style>
 <body id="body" style="background-color: rgb(20, 20, 20);">
+
+    <a href="http://neziherbay.ml/home"><button class="anasayfabtn"></button></a>
+
     <canvas id="canvas" width="860" height="605" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">Tarayıcınız canvası desteklemiyor. :'(</canvas>
+    
     <script>
 
         window.onload = function(){
