--- a/snake/index.html
+++ b/snake/index.html
@@ -1,15 +1,18 @@
 ﻿<html>
-    <style>
-        .anasayfabtn {
-            width: 27px;
-            height: 48px;
-            background-image: url(geri_dön.png);
-            background-color: rgb(20, 20, 20);
-            border: none;
-            outline: none;
-            cursor: pointer;
-        }
-    </style>
+    <head>
+        <title>Snake - Nezih Erbay</title>
+        <style>
+            .anasayfabtn {
+                width: 27px;
+                height: 48px;
+                background-image: url(geri_dön.png);
+                background-color: rgb(20, 20, 20);
+                border: none;
+                outline: none;
+                cursor: pointer;
+            }
+        </style>
+    </head>
 <body id="body" style="background-color: rgb(20, 20, 20);">
 
     <a href="http://neziherbay.ml/home"><button class="anasayfabtn"></button></a>
