--- a/snake/index.html
+++ b/snake/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
     <head>
+        <link rel="icon" href="../icon.png">
         <title>Snake - Nezih Erbay</title>
         <style>
             .anasayfabtn {
