button and background update

--- a/snake/index.html
+++ b/snake/index.html
@@ -6,7 +6,7 @@
             .anasayfabtn {
                 width: 18px;
                 height: 32px;
-                background-image: url(geri_dön.png);
+                background-image: url(../imgs/geri_dön.png);
                 background-color: rgb(20, 20, 20);
                 border: none;
                 outline: none;
