--- a/test-game/index.html
+++ b/test-game/index.html
@@ -1,5 +1,20 @@
 <html>
     <link rel="icon" href="../icon.png">
+    <style>
+        .anasayfabtn {
+            width: 18px;
+            height: 32px;
+            background-image: url(../imgs/geri_dön.png);
+            background-color: rgb(20, 20, 20);
+            border: none;
+            outline: none;
+            cursor: pointer;
+        }
+    </style>
     <canvas id="canvas" width="800" height="600" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)"></canvas>
     <script src="index.js"></script>
+    <body style="background-color: rgb(20, 20, 20);">
+        <a href="http://neziherbay.ml/home"><button class="anasayfabtn"></button></a>
+    </body>
+
 </html>
