--- a/home/index.html
+++ b/home/index.html
@@ -173,7 +173,7 @@
 <script>
     window.onload = function(){
         var snakeButton = document.getElementById("snake_button");
-        var testgameButton = document.getElementById("testgame_button")
+        // var testgameButton = document.getElementById("testgame_button")
 
         snakeButton.addEventListener("mouseenter", function(e){
             snakeButton.classList.remove("snakebtn_unhoverAnim");
@@ -185,15 +185,15 @@
                 snakeButton.classList.add("snakebtn_unhoverAnim");
         });
 
-        testgameButton.addEventListener("mouseenter", function(e){
-            testgameButton.classList.remove("testgamebtn_unhoverAnim");
-            testgameButton.classList.add("testgamebtn_hoverAnim");
-        });
+        // testgameButton.addEventListener("mouseenter", function(e){
+        //     testgameButton.classList.remove("testgamebtn_unhoverAnim");
+        //     testgameButton.classList.add("testgamebtn_hoverAnim");
+        // });
 
-        testgameButton.addEventListener("mouseleave", function(e){
-                testgameButton.classList.remove("testgamebtn_hoverAnim");
-                testgameButton.classList.add("testgamebtn_unhoverAnim");
-        });
+        // testgameButton.addEventListener("mouseleave", function(e){
+        //         testgameButton.classList.remove("testgamebtn_hoverAnim");
+        //         testgameButton.classList.add("testgamebtn_unhoverAnim");
+        // });
 
     }
 </script>
@@ -203,9 +203,8 @@
     <a href="http://neziherbay.ml/snake">
         <button id="snake_button" class="snakebtn">Snake</button>
     </a>
-    <a href="http://neziherbay.ml/test-game">
-        <button id="testgame_button" class="testgamebtn">Test Game</button>
-    </a>
+
+    <h style="font-size: 250; color: whitesmoke;">MALSAMET</h>
 
 </body>
 
