--- a/home/index.html
+++ b/home/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="icon" href="../icon.png">
-<title>Ana Sayfa - Nezih Erbay</title>
+<title>Ana Sayfa - Nezih Erba</title>
 <style>
     @keyframes snakebtn_hover{
         from {
