--- a/snake/index.html
+++ b/snake/index.html
@@ -85,6 +85,8 @@
 
                 }else{
 
+                    console.log(e.keyCode);
+
                     if (e.keyCode !== 39 && e.keyCode !== 37 && e.keyCode !== 38 && e.keyCode !== 40 && e.keyCode !== 32) return;
 
                     if (e.keyCode == 32) return;
