--- a/snake/index.html
+++ b/snake/index.html
@@ -38,7 +38,7 @@
             Dikdörtgen(0, 0, 605, 605, "#423a3a");
 
             for (var i = 0; i < 600; i=i+35){
-                Dikdörtgen(0, i, 605, 10, "#232422");
+                Dikdörtgen(0, i, 605, 10, "#ffffff")//"#232422");
             }
 
             for (var i = 0; i < 600; i=i+35){
@@ -85,7 +85,7 @@
 
                 }else{
 
-                    console.log(e.keyCode);
+                    console.log(e.keyCode.toString());
 
                     if (e.keyCode !== 39 && e.keyCode !== 37 && e.keyCode !== 38 && e.keyCode !== 40 && e.keyCode !== 32) return;
 
