--- a/snake/index.html
+++ b/snake/index.html
@@ -95,13 +95,13 @@
 
                     keypressed = true;
 
-                    if ((e.keyCode == 39 || e.keyCode == 68) && yön !== "sol"){
+                    if ((e.keyCode.toString() == "39" || e.keyCode.toString() == "68") && yön !== "sol"){
                         yön = "sağ";
-                    }else if ((e.keyCode == 37 || e.keyCode == 65) && yön !== "sağ"){
+                    }else if ((e.keyCode.toString() == "37" || e.keyCode.toString() == "65") && yön !== "sağ"){
                         yön = "sol";
-                    }else if ((e.keyCode == 38 || e.keyCode == 87) && yön !== "aşağı"){
+                    }else if ((e.keyCode.toString() == "38" || e.keyCode.toString() == "87") && yön !== "aşağı"){
                         yön = "yukarı";
-                    }else if ((e.keyCode == 40 || e.keyCode == 83) && yön !== "yukarı"){
+                    }else if ((e.keyCode.toString() == "40" || e.keyCode.toString() == "83") && yön !== "yukarı"){
                         yön = "aşağı";
                     }
 
