--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
     
-    <a href="http://neziherbay.ml/snake">
+    <a href="http://tr-eatcake.github.io/snake">
         <button id="snake_button" class="snakebtn">Snake</button>
     </a>
 
