--- a/snake/index.html
+++ b/snake/index.html
@@ -87,7 +87,7 @@
 
                     console.log(e.keyCode.toString());
 
-                    if (e.keyCode !== 39 && e.keyCode !== 37 && e.keyCode !== 38 && e.keyCode !== 40 && e.keyCode !== 32) return;
+                    if (e.keyCode !== 39 && e.keyCode !== 37 && e.keyCode !== 38 && e.keyCode !== 40 && e.keyCode !== 32 && e.key !== "a" && e.key !== "s" && e.key !== "d" && e.key !== "w") return;
 
                     if (e.keyCode == 32) return;
 
