--- a/index.html
+++ b/index.html
@@ -1,210 +1,45 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <link rel="icon" href="../icon.png">
-<title>Ana Sayfa - Nezih Erbay</title>
-<style>
-    @keyframes snakebtn_hover{
-        from {
-            border: none;
-            width: 150px;
-            height: 72px;
-            border-radius: 33px;
-            font-size: 24px;
-            left: 200px;
-            top: 60px;
-        }
-        to {
-            border: 3px solid white;
-            width: 200px;
-            height: 96px;
-            border-radius: 44px;
-            font-size: 32px;
-            left: 175px;
-            top: 48px;
-        }
-    }
-    @keyframes snakebtn_nothover{
-        from {
-            border: 3px solid white;
-            width: 200px;
-            height: 96px;
-            border-radius: 44px;
-            font-size: 32px;
-            left: 175px;
-            top: 48px;
-        }
-        to {
-            border: none;
-            width: 150px;
-            height: 72px;
-            border-radius: 33px;
-            font-size: 24px;
-            left: 200px;
-            top: 60px;
-        }
-    }
-
-    @keyframes testgamebtn_hover{
-        from {
-            border: none;
-            width: 150px;
-            height: 72px;
-            border-radius: 33px;
-            font-size: 24px;
-            left: 200px;
-            top: 160px;
-        }
-        to {
-            border: 3px solid white;
-            width: 200px;
-            height: 96px;
-            border-radius: 44px;
-            font-size: 32px;
-            left: 175px;
-            top: 148px;
-        }
-    }
-    @keyframes testgamebtn_nothover{
-        from {
-            border: 3px solid white;
-            width: 200px;
-            height: 96px;
-            border-radius: 44px;
-            font-size: 32px;
-            left: 175px;
-            top: 148px;
-        }
-        to {
-            border: none;
-            width: 150px;
-            height: 72px;
-            border-radius: 33px;
-            font-size: 24px;
-            left: 200px;
-            top: 160px;
-        }
-    }
-
-    *{
-        font-family: sans-serif;
-    }
-    body{
-        background-color: rgb(20, 20, 20);
-    }
-    .snakebtn{
-        width: 150px;
-        height: 72px;
-        font-size: 24px;
-        color: white;
-        background-color: rgb(14, 131, 14);
-        border: none;
-        border-radius: 33px;
-        outline: none;
-        cursor: pointer;
-        position: absolute;
-        left: 200px;
-        top: 60px;
-    }
-
-    .testgamebtn{
-        width: 150px;
-        height: 72px;
-        font-size: 24px;
-        color: white;
-        background-color: rgb(14, 131, 14);
-        border: none;
-        border-radius: 33px;
-        outline: none;
-        cursor: pointer;
-        position: absolute;
-        left: 200px;
-        top: 160px;
-    }
-
-    .snakebtn_hoverAnim {
-        animation-name: snakebtn_hover;
-        animation-duration: 0.3s;
-        border: 3px solid white;
-        width: 200px;
-        height: 96px;
-        border-radius: 44px;
-        font-size: 32px;
-        left: 175px;
-        top: 48px;
-    }
-
-    .snakebtn_unhoverAnim {
-        animation-name: snakebtn_nothover;
-        animation-duration: 0.3s;
-        border:none;
-        width: 150px;
-        height: 72px;
-        border-radius: 33px;
-        font-size: 24px;
-        left: 200px;
-        top: 60px;
-    }
-
-    .testgamebtn_hoverAnim {
-        animation-name: testgamebtn_hover;
-        animation-duration: 0.3s;
-        border: 3px solid white;
-        width: 200px;
-        height: 96px;
-        border-radius: 44px;
-        font-size: 32px;
-        left: 175px;
-        top: 148px;
-    }
-
-    .testgamebtn_unhoverAnim {
-        animation-name: testgamebtn_nothover;
-        animation-duration: 0.3s;
-        border:none;
-        width: 150px;
-        height: 72px;
-        border-radius: 33px;
-        font-size: 24px;
-        left: 200px;
-        top: 160px;
-    }
-    
-</style>
-<script>
-    window.onload = function(){
-        var snakeButton = document.getElementById("snake_button");
-        // var testgameButton = document.getElementById("testgame_button")
-
-        snakeButton.addEventListener("mouseenter", function(e){
-            snakeButton.classList.remove("snakebtn_unhoverAnim");
-            snakeButton.classList.add("snakebtn_hoverAnim");
-        });
-
-        snakeButton.addEventListener("mouseleave", function(e){
-                snakeButton.classList.remove("snakebtn_hoverAnim");
-                snakeButton.classList.add("snakebtn_unhoverAnim");
-        });
-
-        // testgameButton.addEventListener("mouseenter", function(e){
-        //     testgameButton.classList.remove("testgamebtn_unhoverAnim");
-        //     testgameButton.classList.add("testgamebtn_hoverAnim");
-        // });
-
-        // testgameButton.addEventListener("mouseleave", function(e){
-        //         testgameButton.classList.remove("testgamebtn_hoverAnim");
-        //         testgameButton.classList.add("testgamebtn_unhoverAnim");
-        // });
-
-    }
-</script>
-</head>
-<body>
-    
-    <a href="http://tr-eatcake.github.io/snake">
-        <button id="snake_button" class="snakebtn">Snake</button>
-    </a>
-
-
-</body>
-
+    <head>
+        <title>Nezih Erbay</title>
+        <style>
+            body {
+                background-color: rgb(20, 20, 20);
+            }
+            h1, p{
+                color: white;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 50px;
+            }
+            .animbtn{
+                width:160px;
+                height:80px;
+                border:none;
+                background-color: rgb(21, 156, 21);
+                border-radius: 25px;
+                box-shadow: 0px 10px rgb(9, 109, 9);
+                font-family:Arial, Helvetica, sans-serif;
+                font-size:25px;
+                color:white;
+            }
+            .animbtn:hover{
+                cursor:pointer;
+                border: 3px solid white;
+                transition-duration: 0.05s;
+            }
+            .animbtn:active{
+                box-shadow: 0px 5px rgb(9, 109, 9);
+                transform: translateY(5px);
+                transition-duration: 0s;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Nezih Erbay</h1>
+        <a href="http://tr-eatcake.github.io/snake">
+            <button id="snakebtn", class="animbtn">Snake</button>
+        </a href="http://tr-eatcake.github.io/snakev2"> 
+            <button id="snakebtn_2", class="animbtn">Snake V2</button>
+        </a>
+    </body>
 </html>
