--- a/index_2.html
+++ b/index_2.html
@@ -37,7 +37,7 @@
     <body>
         <a href="http://tr-eatcake.github.io/snake">
             <button id="snakebtn", class="animbtn", style="margin-left:25px;margin-top:50px;">Snake</button>
-        </a href="http://tr-eatcake.github.io/snakev2"> 
+        <a href="http://tr-eatcake.github.io/snakev2"> 
             <button id="snakebtn_2", class="animbtn", style="margin-left:25px;margin-top:50px;">Snake V2</button>
         </a>
     </body>
