--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
         </style>
     </head>
     <body>
-        <h1>Nezih Erbay</h1>
         <a href="http://tr-eatcake.github.io/snake">
             <button id="snakebtn", class="animbtn">Snake</button>
-        </a href="http://tr-eatcake.github.io/snakev2"> 
+        <a href="http://tr-eatcake.github.io/snakev2"> 
             <button id="snakebtn_2", class="animbtn">Snake V2</button>
         </a>
     </body>
