--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </head>
     <body>
         <a href="http://tr-eatcake.github.io/snake">
-            <button id="snakebtn", class="animbtn">Snake</button>
+            <button id="snakebtn", class="animbtn", style="margin-left:25px;margin-top:50px;">Snake</button>
         <a href="http://tr-eatcake.github.io/snakev2"> 
-            <button id="snakebtn_2", class="animbtn">Snake V2</button>
+            <button id="snakebtn_2", class="animbtn", style="margin-left:25px;margin-top:50px;">Snake V2</button>
         </a>
     </body>
 </html>
