--- a/snake/index.html
+++ b/snake/index.html
@@ -16,7 +16,7 @@
     </head>
 <body id="body" style="background-color: rgb(20, 20, 20);">
 
-    <a href="http://tr-eatcake.github.io/home"><button class="anasayfabtn"></button></a>
+    <a href="http://tr-eatcake.github.io"><button class="anasayfabtn"></button></a>
 
     <canvas id="canvas" width="860" height="605" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">Tarayıcınız canvası desteklemiyor. :'(</canvas>
     
