--- a/snakev2/index.html
+++ b/snakev2/index.html
@@ -65,9 +65,8 @@
                             yön = 4;
                         }
                     }
-                    touchstartx = null;
-                    touchstarty = null;
                 }
+                e.preventDefault();
             }
 
             function KeyDown(e){
