--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Nezih Erbay</title>
+        <link rel="icon", href="icon.png">
         <style>
             body {
                 background-color: rgb(20, 20, 20);
