--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 font-family:Arial, Helvetica, sans-serif;
                 font-size:25px;
                 color:white;
+                margin-left: 25px;
             }
             .animbtn:hover{
                 cursor:pointer;
@@ -37,9 +38,13 @@
     </head>
     <body>
         <a href="http://tr-eatcake.github.io/snake">
-            <button id="snakebtn", class="animbtn", style="margin-left:25px;margin-top:50px;">Snake</button>
+            <button id="snakebtn", class="animbtn">Snake</button>
+        </a>
         <a href="http://tr-eatcake.github.io/snakev2"> 
-            <button id="snakebtn_2", class="animbtn", style="margin-left:25px;margin-top:50px;">Snake V2</button>
+            <button id="snakebtn_2", class="animbtn">Snake V2</button>
+        </a>
+        <a href="http://tr-eatcake.github.io/particle_simulation"> 
+            <button id="simulaionbtn", class="animbtn">Particle Simulation</button>
         </a>
     </body>
 </html>
